# Evo-ToDo

./: .gitignore  README.md  auth_app.py  main.py  mongo_test.py  pyproject.toml  todo.py
Routers/: auth_app.py  todo.py
evotodo/: cli.py  config.py  utils.py
