[project]
name = "evo-todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "motor>=3.7.1",
    "click>=8.3.1",
    "requests>=2.33.0",
]

[tool.setuptools.packages.find]
include = ["evotodo*"]

[project.scripts]
evotodo = "evotodo.cli:cli"
